--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="/web/upload/favicon-fdce32da9c8caa2c8a43d16f43776131.ico" />
-  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
+  <link rel="shortcut icon" href="/images/favicon.jpgfavicon-fdce32da9c8caa2c8a43d16f43776131.jpg" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <meta property="og:url" content="http://leeumstore.org/" />
   <meta property="og:site_name" content="리움스토어" />
   <meta property="og:type" content="website" />
   <meta name="path_role" content="MAIN" />
-  <meta name="author" content="가족에게 행복을 선사하는 스킨케어 라이프스타일 브랜드" />
-  <meta name="description" content="8:23PM. 매일 저녁, 노엘로힐스와 함께 온 가족에게 행복을 선사하는 스킨케어 라이프스타일을 경험하세요." />
-  <meta name="keywords"
-    content="노엘로힐스노엘로힐스,노엘로힐즈, noelo hills, 신생아로션, 아기로션, 출산선물추천, 출산준비물, 베이비로션, 유기농로션, 세라마이드, 신생아목욕법, 신생아케어, 아이로션, 펜타세라, 아기에센스, 아기에센스로션, 푸드그레이드, 식품성분아기로션" />
+  <meta name="keywords" content="리움스토어" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
- 
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+
   <title>리움스토어</title>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>  
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="js/prefixfree.min.js"></script>
-  <!--[if lt IE 9]> 
-      <script src="js/html5shiv.js"></script>
-  <![endif]-->
+  <script src="js/html5shiv.js"></script>
   <script src="js/respond.min.js"></script>
-  <link rel="stylesheet" href="css/reset.css">  <!-- 사용자 지정 -->
+  <link rel="stylesheet" href="css/reset.css">
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  
+
 </body>
+
 </html>
