--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,700%7CNanum+Gothic:400,700&amp;subset=korean" rel="stylesheet">
   <meta property="og:url" content="http://leeumstore.org/" />
   <meta property="og:site_name" content="리움스토어" />
   <meta property="og:type" content="website" />
@@ -34,14 +35,66 @@
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="js/prefixfree.min.js"></script>
-  <script src="js/html5shiv.js"></script>
+  <!--[if lt IE 9]> 
+    <script src="js/html5shiv.js"></script>
+    <![endif]-->
   <script src="js/respond.min.js"></script>
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="js/swiper/swiper.min.css">
+  <script src="js/html5shiv.js"></script>
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+  <!-- 전체 레이아웃 -->
+  <div class="wrap">
+    <!-- 상단 -->
+    <header class="header">
+      <div class="inner"></div>
+    </header>
+    <!-- //상단 -->
+    <section class="container">
+      <div class="inner">
+        <!-- 비주얼 -->
+        <div class="visual">
+        </div>
+        <!-- //비주얼 -->
+        <!-- 아티스트 -->
+        <div class="artist"></div>
+        <!-- //아티스트 -->
+        <!-- 더보기 버튼 -->
+        <div class="more-bt"></div>
+        <!-- //더보기 버튼 -->
+        <!-- 세라믹 -->
+        <div class="ceramic"></div>
+        <!-- //세라믹 -->
+        <!-- 글라스 -->
+        <div class="glass"></div>
+        <!-- //글라스 -->
+        <!-- 메탈 -->
+        <div class="metal"></div>
+        <!-- //메탈 -->
+        <!-- 페이퍼 -->
+        <div class="paper"></div>
+        <!-- //페이퍼 -->
+        <!-- 페브릭 -->
+        <div class="fabric"></div>
+        <!-- //페브릭 -->
+      </div>
+    </section>
+    <!-- 하단 -->
+    <footer class="footer">
+      <div class="inner"></div>
+    </footer>
+    <!-- //하단 -->
+  </div>
+
+
+
+
+
+
 
 </body>
 
