--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,700%7CNanum+Gothic:400,700&amp;subset=korean" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,700%7CNanum+Gothic:400,700&amp;subset=korean"
+    rel="stylesheet">
   <meta property="og:url" content="http://leeumstore.org/" />
   <meta property="og:site_name" content="리움스토어" />
   <meta property="og:type" content="website" />
