이미지 파일 생성

--- a/index.html
+++ b/index.html
@@ -52,9 +52,28 @@
   <div class="wrap">
     <!-- 상단 -->
     <header class="header">
-      <div class="inner"></div>
+      <div class="inner">
+        <div class="header-logo">
+          <img src="" alt="">
+        </div>
+        <div class="header-icon">
+          <a href="#">
+            <img src="" alt="로그인">
+          </a>
+          <a href="">
+            <img src="" alt="장바구니">
+          </a>
+        </div>
+      </div>
     </header>
     <!-- //상단 -->
+
+    <!-- 사이드 메뉴 -->
+    <div class="side-menu">
+
+    </div>
+    <!-- //사이드 메뉴 -->
+
     <section class="container">
       <div class="inner">
         <!-- 비주얼 -->
