--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           <img src="" alt="">
         </div>
         <div class="header-icon">
-          <a href="#">
-            <img src="" alt="로그인">
+          <a href="#">            <img src="" alt="로그인">
           </a>
           <a href="">
             <img src="" alt="장바구니">
@@ -67,10 +66,73 @@
       </div>
     </header>
     <!-- //상단 -->
-
+    <!-- 검색창 -->
+    <div class="search-box"></div>
+    <!-- //검색창 -->
     <!-- 사이드 메뉴 -->
     <div class="side-menu">
-
+      <ul>
+        <li>
+          <a href="#">LEEUM STORE</a>
+        </li>
+        <li class="pd-menu">
+          <a href="#">PRODUCT</a>
+          <ul class="sub-menu">
+            <li>
+              <a href="#">LEEUM PRODUCT</a>
+            </li>
+            <li>
+              <a href="#">ARTIST</a>
+            </li>
+            <li>
+              <a href="#">MATERIAL</a>
+              <ul class="sub-menu-2">
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <span></span>
+              </ul>
+            </li>
+            <li>
+              <a href="#">GIFT</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">EVENT</a>
+          <ul class="sub-menu">
+            <li>
+              <a href="#">MAIN EXHIBITION</a>
+            </li>
+            <li>
+              <a href="#">STORE EXHIBITION</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">SPACE</a>
+          <ul class="sub-menu">
+            <li>
+              <a href="#">MAIN EXHIBITION</a>
+            </li>
+            <li>
+              <a href="#">STORE EXHIBITION</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">SEARCH</a>
+        </li>
+        <li>
+          <a href="#">LEEUM</a>
+        </li>
+      </ul>
     </div>
     <!-- //사이드 메뉴 -->
 
