header, visual 구현

--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
   <div class="wrap">
     <!-- 상단 -->
     <header class="header">
-      <div class="inner">
+      <div class="inner clearfix">
         <div class="header-logo">
-          <img src="" alt="">
+          <a href="#"><img src="images/logo.svg" alt="leeumstore"></a>
         </div>
         <div class="header-icon">
-          <a href="#">            <img src="" alt="로그인">
+          <a href="#">            
+            <img src="images/icon_login.svg" alt="로그인">
           </a>
-          <a href="">
-            <img src="" alt="장바구니">
+          <a href="#">
+            <img src="images/icon_cart.svg" alt="장바구니">
           </a>
         </div>
       </div>
@@ -140,6 +141,7 @@
       <div class="inner">
         <!-- 비주얼 -->
         <div class="visual">
+
         </div>
         <!-- //비주얼 -->
         <!-- 아티스트 -->
