--- a/index.html
+++ b/index.html
@@ -141,32 +141,118 @@
       <div class="inner">
         <!-- 비주얼 -->
         <div class="visual">
-
+          <a href="#"></a>
         </div>
         <!-- //비주얼 -->
+
         <!-- 아티스트 -->
-        <div class="artist"></div>
+        <div class="artist">
+          <div class="inner">
+            <h2>ARTIST</h2>
+            <ul class="artist-list  clearfix">
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-1.jpeg" alt="">
+                  <span>이찬우 Yi, Chanu</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-2.jpeg" alt="">
+                  <span>김동현 & 최현우 Kim, Donghyun & Choi, Hyunwoo</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-3.jpeg" alt="">
+                  <span>김용관 Kim, Yongkwan</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-4.jpeg" alt="">
+                  <span>김현주 Kim, Hyunjoo</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-5.jpeg" alt="">
+                  <span>최병훈 Choi, Byunghoon</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-6.jpeg" alt="">
+                  <span>정연중 Chung, Yeonjung</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-7.jpeg" alt="">
+                  <span>임서윤 Rim, Seoyoon</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-8.jpeg" alt="">
+                  <span>박선민 Park, Seonmin</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-9.jpeg" alt="">
+                  <span>김유정 Kim, Yoojung</span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-10.jpeg" alt="">
+                  <span>이준희 Lee, Junhee</span>                 
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-11.jpeg" alt="">
+                  <span>박성극 Park, Songkuk</span>                 
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="images/artist/artist-pic-12.jpeg" alt="">
+                  <span>박원민 Park, Wonmin</span>                 
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- //아티스트 -->
+
         <!-- 더보기 버튼 -->
         <div class="more-bt"></div>
         <!-- //더보기 버튼 -->
+
         <!-- 세라믹 -->
         <div class="ceramic"></div>
         <!-- //세라믹 -->
+
         <!-- 글라스 -->
         <div class="glass"></div>
         <!-- //글라스 -->
+
         <!-- 메탈 -->
         <div class="metal"></div>
         <!-- //메탈 -->
+
         <!-- 페이퍼 -->
         <div class="paper"></div>
         <!-- //페이퍼 -->
+
         <!-- 페브릭 -->
         <div class="fabric"></div>
         <!-- //페브릭 -->
       </div>
     </section>
+
     <!-- 하단 -->
     <footer class="footer">
       <div class="inner"></div>
