더보기 버튼 생성

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="#"><img src="images/logo.svg" alt="leeumstore"></a>
         </div>
         <div class="header-icon">
-          <a href="#">            
+          <a href="#">
             <img src="images/icon_login.svg" alt="로그인">
           </a>
           <a href="#">
@@ -148,78 +148,102 @@
         <!-- 아티스트 -->
         <div class="artist">
           <div class="inner">
-            <h2>ARTIST</h2>
+            <h2><a href="#">ARTIST</a></h2>
             <ul class="artist-list  clearfix">
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-1.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-1.jpeg" alt="이찬우 Yi, Chanu">
+                  </div>
                   <span>이찬우 Yi, Chanu</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-2.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-2.jpeg" alt="">
+                  </div>
                   <span>김동현 & 최현우 Kim, Donghyun & Choi, Hyunwoo</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-3.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-3.jpeg" alt="">
+                  </div>
                   <span>김용관 Kim, Yongkwan</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-4.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-4.jpeg" alt="">
+                  </div>
                   <span>김현주 Kim, Hyunjoo</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-5.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-5.jpeg" alt="">
+                  </div>
                   <span>최병훈 Choi, Byunghoon</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-6.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-6.jpeg" alt="">
+                  </div>
                   <span>정연중 Chung, Yeonjung</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-7.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-7.jpeg" alt="">
+                  </div>
                   <span>임서윤 Rim, Seoyoon</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-8.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-8.jpeg" alt="">
+                  </div>
                   <span>박선민 Park, Seonmin</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-9.jpeg" alt="">
+                  <div>
+                    <img src="images/artist/artist-pic-9.jpeg" alt="">
+                  </div>
                   <span>김유정 Kim, Yoojung</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-10.jpeg" alt="">
-                  <span>이준희 Lee, Junhee</span>                 
+                  <div>
+                    <img src="images/artist/artist-pic-10.jpeg" alt="">
+                  </div>
+                  <span>이준희 Lee, Junhee</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-11.jpeg" alt="">
-                  <span>박성극 Park, Songkuk</span>                 
+                  <div>
+                    <img src="images/artist/artist-pic-11.jpeg" alt="">
+                  </div>
+                  <span>박성극 Park, Songkuk</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/artist/artist-pic-12.jpeg" alt="">
-                  <span>박원민 Park, Wonmin</span>                 
+                  <div>
+                    <img src="images/artist/artist-pic-12.jpeg" alt="">
+                  </div>
+                  <span>박원민 Park, Wonmin</span>
                 </a>
               </li>
             </ul>
@@ -228,11 +252,35 @@
         <!-- //아티스트 -->
 
         <!-- 더보기 버튼 -->
-        <div class="more-bt"></div>
+        <div class="more">
+          <div class="inner">
+            <button class="more-bt" onclick="location.href='#'">SEE MORE</button>
+          </div>
+        </div>
         <!-- //더보기 버튼 -->
 
         <!-- 세라믹 -->
-        <div class="ceramic"></div>
+        <div class="ceramic">
+          <div class="inner">
+            <h2><a href="#">CERAMIC</a></h2>
+            <div class="swiper mySwiper sw-ceramic">
+              <ul class="swiper-wrapper sw-ceramic-list">
+                <li class="swiper-slide"><img src="images/ceramic/c-item1.jpg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item2.jpeg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item3.jpeg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item4.jpg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item5.jpeg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item6.jpeg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item7.jpeg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item8.jpeg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item9.jpg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item10.jpg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item11.jpg" alt="#"></li>
+                <li class="swiper-slide"><img src="images/ceramic/c-item12.jpg" alt="#"></li>
+              </ul>
+              <div class="swiper-pagination"></div>
+          </div>
+        </div>
         <!-- //세라믹 -->
 
         <!-- 글라스 -->
