--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <script src="js/respond.min.js"></script>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="js/swiper/swiper.min.css">
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/html5shiv.js"></script>
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/main.css">
@@ -263,29 +264,163 @@
         <!-- 세라믹 -->
         <div class="ceramic">
           <div class="inner">
-            <h2><a href="#">CERAMIC</a></h2>
-            <div class="swiper mySwiper sw-ceramic">
-              <ul class="swiper-wrapper sw-ceramic-list">
-                <li class="swiper-slide"><img src="images/ceramic/c-item1.jpg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item2.jpeg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item3.jpeg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item4.jpg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item5.jpeg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item6.jpeg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item7.jpeg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item8.jpeg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item9.jpg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item10.jpg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item11.jpg" alt="#"></li>
-                <li class="swiper-slide"><img src="images/ceramic/c-item12.jpg" alt="#"></li>
+            <h2>
+              <a href="#">CERAMIC</a>
+              <button class="sw-next"></button>
+            </h2>
+            <div class="swiper-container sw-ceramic">
+              <ul class="swiper-wrapper sw-list">
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item1.jpg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item1-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item2.jpeg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item2-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item3.jpeg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item3-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item4.jpg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item4-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item5.jpeg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item5-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item6.jpeg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item6-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item7.jpeg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item7-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item8.jpeg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item8-1.jpeg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item9.jpg" alt="" class="main-img">
+                    <img src="images/ceramic/c-item9-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item10.jpg" alt="#" class="main-img">
+                    <img src="images/ceramic/c-item10-1.jpg" alt="#" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item11.jpg" alt="#" class="main-img">
+                    <img src="images/ceramic/c-item11-1.jpg" alt="#" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/ceramic/c-item12.jpg" alt="#" class="main-img">
+                    <img src="images/ceramic/c-item12-1.jpg" alt="#" class="change-img">
+                  </a>
+                </li>
               </ul>
-              <div class="swiper-pagination"></div>
+            </div>
           </div>
         </div>
         <!-- //세라믹 -->
 
         <!-- 글라스 -->
-        <div class="glass"></div>
+        <div class="glass">
+          <div class="inner">
+            <h2>
+              <a href="#">glass</a>
+              <button class="sw-next"></button>
+            </h2>
+            <div class="swiper-container sw-ceramic">
+              <ul class="swiper-wrapper sw-list">
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass-1.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass1-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass2.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass2-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass3.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass3-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass4.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass4-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass5.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass5-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass6.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass6-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass7.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass7-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass8.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass8-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass9.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass9-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/glass/glass10.jpg" alt="" class="main-img">
+                    <img src="images/glass/glass10-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <!-- //글라스 -->
 
         <!-- 메탈 -->
