--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="inner">
             <h2>
               <a href="#">CERAMIC</a>
-              <button class="sw-next"></button>
+              <button class="sw-ceramic-next"></button>
             </h2>
             <div class="swiper-container sw-ceramic">
               <ul class="swiper-wrapper sw-list">
@@ -353,9 +353,9 @@
           <div class="inner">
             <h2>
               <a href="#">glass</a>
-              <button class="sw-next"></button>
+              <button class="sw-glass-next"></button>
             </h2>
-            <div class="swiper-container sw-ceramic">
+            <div class="swiper-container sw-glass">
               <ul class="swiper-wrapper sw-list">
                 <li class="swiper-slide">
                   <a href="#">
@@ -424,22 +424,132 @@
         <!-- //글라스 -->
 
         <!-- 메탈 -->
-        <div class="metal"></div>
+        <div class="metal">
+          <div class="inner">
+            <h2>
+              <a href="#">METAL</a>
+              <button class="sw-metal-next"></button>
+            </h2>
+            <div class="swiper-container sw-metal">
+              <ul class="swiper-wrapper sw-list">
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/metal/metal1.jpg" alt="" class="main-img">
+                    <img src="images/metal/metal1-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/metal/metal2.jpg" alt="" class="main-img">
+                    <img src="images/metal/metal2-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/metal/metal3.jpg" alt="" class="main-img">
+                    <img src="images/metal/metal3-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/metal/metal4.jpg" alt="" class="main-img">
+                    <img src="images/metal/metal4-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/metal/metal5.jpg" alt="" class="main-img">
+                    <img src="images/metal/metal5-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                
+              </ul>
+            </div>
+          </div>
+        </div>
         <!-- //메탈 -->
 
         <!-- 페이퍼 -->
-        <div class="paper"></div>
+        <div class="paper">
+          <div class="inner">
+            <h2>
+              <a href="#">PAPER</a>
+              <button class="sw-paper-next"></button>
+            </h2>
+            <div class="swiper-container sw-paper">
+              <ul class="swiper-wrapper sw-list">
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/paper/paper1.jpg" alt="" class="main-img">
+                    <img src="images/paper/paper1-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/paper/paper2.jpg" alt="" class="main-img">
+                    <img src="images/paper/paper2-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/paper/paper3.jpg" alt="" class="main-img">
+                    <img src="images/paper/paper3-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/paper/paper4.jpg" alt="" class="main-img">
+                    <img src="images/paper/paper4-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                
+              </ul>
+            </div>
+          </div>
+        </div>        
         <!-- //페이퍼 -->
 
         <!-- 페브릭 -->
-        <div class="fabric"></div>
-        <!-- //페브릭 -->
+        <div class="fabric">
+          <div class="inner">
+            <h2>
+              <a href="#">FABRIC</a>
+              <button class="sw-fabric-next"></button>
+            </h2>
+            <div class="swiper-container sw-fabric">
+              <ul class="swiper-wrapper sw-list">
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/fabric/fabric1.jpg" alt="" class="main-img">
+                    <img src="images/fabric/fabric1-1.jpg alt=" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/fabric/fabric-2.jpg" alt="" class="main-img">
+                    <img src="images/fabric/fabric2-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+                <li class="swiper-slide">
+                  <a href="#">
+                    <img src="images/fabric/fabric3.jpg" alt="" class="main-img">
+                    <img src="images/fabric/faric3-1.jpg" alt="" class="change-img">
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>          
+         <!-- //페브릭 -->
       </div>
     </section>
 
     <!-- 하단 -->
     <footer class="footer">
-      <div class="inner"></div>
+      <div class="inner">
+        <div class="footer-left"></div>
+        <div class="footer-right"></div>
+      </div>
     </footer>
     <!-- //하단 -->
   </div>
