--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- //검색창 -->
     <!-- 사이드 메뉴 -->
     <div class="side-menu">
-      <ul>
+      <ul class = "side-menu-list">
         <li>
           <a href="#">LEEUM STORE</a>
         </li>
@@ -89,17 +89,17 @@
             </li>
             <li>
               <a href="#">MATERIAL</a>
+              <span class="material-arrow">펼치기</span>
               <ul class="sub-menu-2">
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <span></span>
+                <li><a href="#">CERAMIC</a></li>
+                <li><a href="#">GLASS</a></li>
+                <li><a href="#">METAL</a></li>
+                <li><a href="#">FABRIC</a></li>
+                <li><a href="#">PAPER</a></li>
+                <li><a href="#">WOOD</a></li>
+                <li><a href="#">STONE</a></li>
+                <li><a href="#">RESIN</a></li>
+                <li><a href="#">ETC</a></li>
               </ul>
             </li>
             <li>
@@ -122,17 +122,17 @@
           <a href="#">SPACE</a>
           <ul class="sub-menu">
             <li>
-              <a href="#">MAIN EXHIBITION</a>
+              <a href="#">ABOUT LEEUM STORE</a>
             </li>
             <li>
-              <a href="#">STORE EXHIBITION</a>
+              <a href="#">CHAMP COFFEE</a>
             </li>
           </ul>
         </li>
-        <li>
+        <li class="search-bt">
           <a href="#">SEARCH</a>
         </li>
-        <li>
+        <li class="leeum-menu">
           <a href="#">LEEUM</a>
         </li>
       </ul>
@@ -462,7 +462,7 @@
                     <img src="images/metal/metal5-1.jpg" alt="" class="change-img">
                   </a>
                 </li>
-                
+
               </ul>
             </div>
           </div>
@@ -502,11 +502,11 @@
                     <img src="images/paper/paper4-1.jpg" alt="" class="change-img">
                   </a>
                 </li>
-                
+
               </ul>
             </div>
           </div>
-        </div>        
+        </div>
         <!-- //페이퍼 -->
 
         <!-- 페브릭 -->
@@ -539,8 +539,8 @@
               </ul>
             </div>
           </div>
-        </div>          
-         <!-- //페브릭 -->
+        </div>
+        <!-- //페브릭 -->
       </div>
     </section>
 
