--- a/index.html
+++ b/index.html
@@ -3,24 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="/images/favicon.jpgfavicon-fdce32da9c8caa2c8a43d16f43776131.jpg" />
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="shortcut icon" href="images/favicon.ico">
   <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,700%7CNanum+Gothic:400,700&amp;subset=korean"
     rel="stylesheet">
   <meta property="og:url" content="http://leeumstore.org/" />
@@ -33,6 +16,7 @@
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
   <title>리움스토어</title>
+  
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script src="js/prefixfree.min.js"></script>
@@ -74,7 +58,7 @@
     <!-- //검색창 -->
     <!-- 사이드 메뉴 -->
     <div class="side-menu">
-      <ul class = "side-menu-list">
+      <ul class="side-menu-list">
         <li>
           <a href="#">LEEUM STORE</a>
         </li>
@@ -521,7 +505,7 @@
                 <li class="swiper-slide">
                   <a href="#">
                     <img src="images/fabric/fabric1.jpg" alt="" class="main-img">
-                    <img src="images/fabric/fabric1-1.jpg alt=" class="change-img">
+                    <img src="images/fabric/fabric1-1.jpg" alt="" class="change-img">
                   </a>
                 </li>
                 <li class="swiper-slide">
@@ -546,9 +530,37 @@
 
     <!-- 하단 -->
     <footer class="footer">
-      <div class="inner">
-        <div class="footer-left"></div>
-        <div class="footer-right"></div>
+      <div class="inner clearfix">
+        <div class="footer-left">
+          <div class="footer-left-info">
+            <strong><a href="#">GUEST ORDER</a></strong>
+            <strong class="mr-30"><a href="#">FAQ</a></strong>
+            <a href="#" class="f-line">이용약관</a>
+            <a href="#" class="f-line">이용안내</a>
+            <a href="#" class="f-line"> 개인정보처리방침</a>
+            <a href="#" class="f-line">공지사항</a>
+            <span class="ml-25">©SAMSUNG FOUNDATION OF CULTURE</span>
+          </div>
+          <div class="footer-left-address">
+            <span>삼성문화재단</span><span>대표자명:유문형</span>
+            <span>사업자등록번호:110-82-05953 <a href="#">[사업자정보확인]</a></span>
+            <span>전화번호:02-2014-6754</span><span>통신판매업신고번호:제2021-서울용산-0616호</span>
+            <span>서울특별시 용산구 이태원로55길 60-16 (한남동)</span>
+          </div>
+        </div>
+        <div class="footer-right">
+          <div class="f-icon">
+            <a href="#" class="f-icon-fb">
+              <img src="images/icon_sns_f.svg" alt="">
+            </a>
+            <a href="#" class="f-icon-is">
+              <img src="images/icon_sns_i.svg" alt="">
+            </a>
+            <a href="#" class="f-icon-yt">
+              <img src="images/icon_sns_y.svg" alt="">
+            </a>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- //하단 -->
